// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/date-picker/demo/basic.md correctly 1`] = `
<div>
  <span
    class="wmstool-calendar-picker"
  >
    <div>
      <input
        class="wmstool-calendar-picker-input wmstool-input"
        placeholder="Select date"
        readonly=""
        value=""
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </div>
  </span>
  <br />
  <span
    class="wmstool-calendar-picker"
  >
    <div>
      <input
        class="wmstool-calendar-picker-input wmstool-input"
        placeholder="Select month"
        readonly=""
        value=""
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </div>
  </span>
  <br />
  <span
    class="wmstool-calendar-picker"
    tabindex="0"
  >
    <span
      class="wmstool-calendar-picker-input wmstool-input"
    >
      <input
        class="wmstool-calendar-range-picker-input"
        placeholder="Start date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="wmstool-calendar-range-picker-separator"
      >
         ~ 
      </span>
      <input
        class="wmstool-calendar-range-picker-input"
        placeholder="End date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </span>
  </span>
  <br />
  <span
    class="wmstool-calendar-picker"
  >
    <span>
      <input
        class="wmstool-calendar-picker-input wmstool-input"
        placeholder="Select week"
        readonly=""
        value=""
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </span>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/date-render.md correctly 1`] = `
<div>
  <span
    class="wmstool-calendar-picker"
  >
    <div>
      <input
        class="wmstool-calendar-picker-input wmstool-input"
        placeholder="Select date"
        readonly=""
        value=""
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </div>
  </span>
  <span
    class="wmstool-calendar-picker"
    tabindex="0"
  >
    <span
      class="wmstool-calendar-picker-input wmstool-input"
    >
      <input
        class="wmstool-calendar-range-picker-input"
        placeholder="Start date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="wmstool-calendar-range-picker-separator"
      >
         ~ 
      </span>
      <input
        class="wmstool-calendar-range-picker-input"
        placeholder="End date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </span>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/disabled.md correctly 1`] = `
<div>
  <span
    class="wmstool-calendar-picker"
  >
    <div>
      <input
        class="wmstool-calendar-picker-input wmstool-input wmstool-input-disabled"
        disabled=""
        placeholder="Select date"
        readonly=""
        value="2015-06-06"
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </div>
  </span>
  <br />
  <span
    class="wmstool-calendar-picker"
  >
    <div>
      <input
        class="wmstool-calendar-picker-input wmstool-input wmstool-input-disabled"
        disabled=""
        placeholder="Select date"
        readonly=""
        value="2015-06"
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </div>
  </span>
  <br />
  <span
    class="wmstool-calendar-picker"
    tabindex="-1"
  >
    <span
      class="wmstool-calendar-picker-input wmstool-input wmstool-input-disabled"
    >
      <input
        class="wmstool-calendar-range-picker-input"
        disabled=""
        placeholder="Start date"
        readonly=""
        tabindex="-1"
        value="2015-06-06"
      />
      <span
        class="wmstool-calendar-range-picker-separator"
      >
         ~ 
      </span>
      <input
        class="wmstool-calendar-range-picker-input"
        disabled=""
        placeholder="End date"
        readonly=""
        tabindex="-1"
        value="2015-06-06"
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </span>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/disabled-date.md correctly 1`] = `
<div>
  <span
    class="wmstool-calendar-picker"
  >
    <div>
      <input
        class="wmstool-calendar-picker-input wmstool-input"
        placeholder="Select date"
        readonly=""
        value=""
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </div>
  </span>
  <br />
  <span
    class="wmstool-calendar-picker"
  >
    <div>
      <input
        class="wmstool-calendar-picker-input wmstool-input"
        placeholder="Select month"
        readonly=""
        value=""
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </div>
  </span>
  <br />
  <span
    class="wmstool-calendar-picker"
    style="width:350px"
    tabindex="0"
  >
    <span
      class="wmstool-calendar-picker-input wmstool-input"
    >
      <input
        class="wmstool-calendar-range-picker-input"
        placeholder="Start date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="wmstool-calendar-range-picker-separator"
      >
         ~ 
      </span>
      <input
        class="wmstool-calendar-range-picker-input"
        placeholder="End date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </span>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/extra-footer.md correctly 1`] = `
<div>
  <span
    class="wmstool-calendar-picker"
  >
    <div>
      <input
        class="wmstool-calendar-picker-input wmstool-input"
        placeholder="Select date"
        readonly=""
        value=""
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </div>
  </span>
  <span
    class="wmstool-calendar-picker"
  >
    <div>
      <input
        class="wmstool-calendar-picker-input wmstool-input"
        placeholder="Select date"
        readonly=""
        value=""
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </div>
  </span>
  <span
    class="wmstool-calendar-picker"
    tabindex="0"
  >
    <span
      class="wmstool-calendar-picker-input wmstool-input"
    >
      <input
        class="wmstool-calendar-range-picker-input"
        placeholder="Start date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="wmstool-calendar-range-picker-separator"
      >
         ~ 
      </span>
      <input
        class="wmstool-calendar-range-picker-input"
        placeholder="End date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </span>
  </span>
  <span
    class="wmstool-calendar-picker"
    style="width:350px"
    tabindex="0"
  >
    <span
      class="wmstool-calendar-picker-input wmstool-input"
    >
      <input
        class="wmstool-calendar-range-picker-input"
        placeholder="Start date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="wmstool-calendar-range-picker-separator"
      >
         ~ 
      </span>
      <input
        class="wmstool-calendar-range-picker-input"
        placeholder="End date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </span>
  </span>
  <span
    class="wmstool-calendar-picker"
  >
    <div>
      <input
        class="wmstool-calendar-picker-input wmstool-input"
        placeholder="Select month"
        readonly=""
        value=""
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </div>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/format.md correctly 1`] = `
<div>
  <span
    class="wmstool-calendar-picker"
  >
    <div>
      <input
        class="wmstool-calendar-picker-input wmstool-input"
        placeholder="Select date"
        readonly=""
        value="2015/01/01"
      />
      <i
        class="anticon anticon-cross-circle wmstool-calendar-picker-clear"
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </div>
  </span>
  <br />
  <span
    class="wmstool-calendar-picker"
  >
    <div>
      <input
        class="wmstool-calendar-picker-input wmstool-input"
        placeholder="Select date"
        readonly=""
        value="2015/01"
      />
      <i
        class="anticon anticon-cross-circle wmstool-calendar-picker-clear"
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </div>
  </span>
  <br />
  <span
    class="wmstool-calendar-picker"
    tabindex="0"
  >
    <span
      class="wmstool-calendar-picker-input wmstool-input"
    >
      <input
        class="wmstool-calendar-range-picker-input"
        placeholder="Start date"
        readonly=""
        tabindex="-1"
        value="2015/01/01"
      />
      <span
        class="wmstool-calendar-range-picker-separator"
      >
         ~ 
      </span>
      <input
        class="wmstool-calendar-range-picker-input"
        placeholder="End date"
        readonly=""
        tabindex="-1"
        value="2015/01/01"
      />
      <i
        class="anticon anticon-cross-circle wmstool-calendar-picker-clear"
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </span>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/mode.md correctly 1`] = `
<div>
  <span
    class="wmstool-calendar-picker"
  >
    <div>
      <input
        class="wmstool-calendar-picker-input wmstool-input"
        placeholder="Select date"
        readonly=""
        value=""
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </div>
  </span>
  <br />
  <span
    class="wmstool-calendar-picker"
    tabindex="0"
  >
    <span
      class="wmstool-calendar-picker-input wmstool-input"
    >
      <input
        class="wmstool-calendar-range-picker-input"
        placeholder="Start month"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="wmstool-calendar-range-picker-separator"
      >
         ~ 
      </span>
      <input
        class="wmstool-calendar-range-picker-input"
        placeholder="End month"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </span>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/presetted-ranges.md correctly 1`] = `
<div>
  <span
    class="wmstool-calendar-picker"
    tabindex="0"
  >
    <span
      class="wmstool-calendar-picker-input wmstool-input"
    >
      <input
        class="wmstool-calendar-range-picker-input"
        placeholder="Start date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="wmstool-calendar-range-picker-separator"
      >
         ~ 
      </span>
      <input
        class="wmstool-calendar-range-picker-input"
        placeholder="End date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </span>
  </span>
  <br />
  <span
    class="wmstool-calendar-picker"
    style="width:350px"
    tabindex="0"
  >
    <span
      class="wmstool-calendar-picker-input wmstool-input"
    >
      <input
        class="wmstool-calendar-range-picker-input"
        placeholder="Start date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="wmstool-calendar-range-picker-separator"
      >
         ~ 
      </span>
      <input
        class="wmstool-calendar-range-picker-input"
        placeholder="End date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </span>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/size.md correctly 1`] = `
<div>
  <div
    class="wmstool-radio-group"
  >
    <label
      class="wmstool-radio-button-wrapper"
    >
      <span
        class="wmstool-radio-button"
      >
        <input
          class="wmstool-radio-button-input"
          type="radio"
          value="large"
        />
        <span
          class="wmstool-radio-button-inner"
        />
      </span>
      <span>
        Large
      </span>
    </label>
    <label
      class="wmstool-radio-button-wrapper wmstool-radio-button-wrapper-checked"
    >
      <span
        class="wmstool-radio-button wmstool-radio-button-checked"
      >
        <input
          checked=""
          class="wmstool-radio-button-input"
          type="radio"
          value="default"
        />
        <span
          class="wmstool-radio-button-inner"
        />
      </span>
      <span>
        Default
      </span>
    </label>
    <label
      class="wmstool-radio-button-wrapper"
    >
      <span
        class="wmstool-radio-button"
      >
        <input
          class="wmstool-radio-button-input"
          type="radio"
          value="small"
        />
        <span
          class="wmstool-radio-button-inner"
        />
      </span>
      <span>
        Small
      </span>
    </label>
  </div>
  <br />
  <br />
  <span
    class="wmstool-calendar-picker wmstool-calendar-picker-default"
  >
    <div>
      <input
        class="wmstool-calendar-picker-input wmstool-input"
        placeholder="Select date"
        readonly=""
        value=""
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </div>
  </span>
  <br />
  <span
    class="wmstool-calendar-picker wmstool-calendar-picker-default"
  >
    <div>
      <input
        class="wmstool-calendar-picker-input wmstool-input"
        placeholder="Select Month"
        readonly=""
        value=""
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </div>
  </span>
  <br />
  <span
    class="wmstool-calendar-picker wmstool-calendar-picker-default"
    tabindex="0"
  >
    <span
      class="wmstool-calendar-picker-input wmstool-input"
    >
      <input
        class="wmstool-calendar-range-picker-input"
        placeholder="Start date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="wmstool-calendar-range-picker-separator"
      >
         ~ 
      </span>
      <input
        class="wmstool-calendar-range-picker-input"
        placeholder="End date"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </span>
  </span>
  <br />
  <span
    class="wmstool-calendar-picker wmstool-calendar-picker-default"
  >
    <span>
      <input
        class="wmstool-calendar-picker-input wmstool-input"
        placeholder="Select Week"
        readonly=""
        value=""
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </span>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/start-end.md correctly 1`] = `
<div>
  <span
    class="wmstool-calendar-picker"
  >
    <div>
      <input
        class="wmstool-calendar-picker-input wmstool-input"
        placeholder="Start"
        readonly=""
        value=""
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </div>
  </span>
  <span
    class="wmstool-calendar-picker"
  >
    <div>
      <input
        class="wmstool-calendar-picker-input wmstool-input"
        placeholder="End"
        readonly=""
        value=""
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </div>
  </span>
</div>
`;

exports[`renders ./components/date-picker/demo/time.md correctly 1`] = `
<div>
  <span
    class="wmstool-calendar-picker"
  >
    <div>
      <input
        class="wmstool-calendar-picker-input wmstool-input"
        placeholder="Select Time"
        readonly=""
        value=""
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </div>
  </span>
  <br />
  <span
    class="wmstool-calendar-picker"
    style="width:350px"
    tabindex="0"
  >
    <span
      class="wmstool-calendar-picker-input wmstool-input"
    >
      <input
        class="wmstool-calendar-range-picker-input"
        placeholder="Start Time"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="wmstool-calendar-range-picker-separator"
      >
         ~ 
      </span>
      <input
        class="wmstool-calendar-range-picker-input"
        placeholder="End Time"
        readonly=""
        tabindex="-1"
        value=""
      />
      <span
        class="wmstool-calendar-picker-icon"
      />
    </span>
  </span>
</div>
`;
